infra/wg/wg-manager/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: wg-manager
  name: wg-manager
  namespace: wg
spec:
  replicas: 1
  selector:
    matchLabels:
      service: wg-manager
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: wg-manager
    spec:
      containers:
        - image: ghcr.io/untersander/wg-manager:0.1.2
          name: wg-manager
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: wireguard
              containerPort: 51820
              protocol: UDP
              hostPort: 51820
          securityContext:
            privileged: true
            capabilities:
              add:
                - NET_ADMIN
                - SYS_MODULE
          volumeMounts:
            - mountPath: /etc/wireguard
              name: etc-wireguard
      resources:
        limits:
          cpu: 100m
          memory: 64Mi
        requests:
          cpu: 100m
          memory: 64Mi
      restartPolicy: Always
      volumes:
        - name: etc-wireguard
          persistentVolumeClaim:
            claimName: etc-wireguard
