infra/wg/wg-manager/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: wg-manager
  name: wg-manager
  namespace: wg
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    service: wg-manager
