infra/wg/wg-manager/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wg-manager
  namespace: wg
spec:
  hostnames:
    - wg-manager.k8s.garden
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-gateway
      namespace: envoy-gateway
      sectionName: websecure
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: wg-manager
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
